2003-07-08  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* lib/wrapper.cpp :
	* lib/wrapper.h :

	  - Added strlist_get().

2003-06-25  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* lib/kb.cpp :
	* lib/kb.h :
	* lib/symtab.cpp :
	* lib/symtab.h :
	* lib/wrapper.cpp :
	* lib/wrapper.h :

	  - Added functions to retrieve symtab identifiers.

	* lib/kb.cpp :
	* lib/kb.h :
	* lib/transtab.cpp :
	* lib/transtab.h :
	* lib/wrapper.cpp :
	* lib/wrapper.h :

	  - Added a get() and length() function wrappers for seqtab and
	    transtab.

	* lib/kb.cpp :
	* lib/kb.h :
	* lib/symtab.cpp :
	* lib/symtab.h :
	* lib/wrapper.cpp :

	  - Added a kb_check_symtab() to see if an identifier is in the symbol
	    table.

2003-06-20  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* lib/kb.h :
	* lib/wrapper.cpp :
	* lib/wrapper.h :

	  - Changes to prevent smodels-dependent features from compiling and
	    being used by external apps if not compiled with smodels support.

	* Makefile.in :
	* configure :
	* configure.ac :
	* rules.mk :
	* lib/Makefile.in :
	* lib/atom.cpp :
	* lib/atom.h :
	* lib/consttab.cpp :
	* lib/expression.cpp :
	* lib/expression.h :
	* lib/kb.cpp :
	* lib/kb.h :
	* lib/list.cpp :
	* lib/numberlist.cpp :
	* lib/seqtab.cpp :
	* lib/seqtab.h :
	* lib/smwrap.cpp :
	* lib/stringlist.cpp :
	* lib/stringlist.h :
	* lib/symtab.cpp :
	* lib/transtab.cpp :
	* lib/vlad.h :
	* lib/wrapper.cpp :
	* lib/wrapper.h :
	* main/Makefile.in :
	* main/operation.l :
	* main/operation.y :
	* main/program.l :
	* main/program.y :
	* main/vlad.cpp :
	* lib/config.h.in :
	* config.h.in :

	  - Build system fixup.

	  - config.h is now in the lib directory to allow it to be included in
	    the installation.

2003-06-18  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* lib/wrapper.h :
	* lib/wrapper.cpp :

	   - Prefixed each function with vlad_ to avoid namespace pollution
	     of linked apps.

2003-06-17  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* lib/wrapper.h :
	* lib/wrapper.cpp :
