@@ -121,6 +121,23 @@ VLAD_EXTERN int vlad_kb_get_symtab(void *a_kb,
   return tmp_kb->get_symtab(a_index, a_str);
 }
 
+/* gives an array of identifiers of type t */
+VLAD_EXTERN int vlad_kb_get_array_symtab(void *a_kb,
+                                         unsigned char a_type,
+                                         char ***a_array,
+                                         unsigned int *a_size)
+{
+  kb *tmp_kb = NULL;
+
+  if (a_kb == NULL)
+    return VLAD_NULLPTR;
+
+  if ((tmp_kb = VLAD_WRAPPER_CAST(a_kb, kb *)) == NULL)
+    return VLAD_INVALIDINPUT;
+
+  return tmp_kb->get_symtab(a_type, a_array, a_size);
+}
+
 /* check if the identifier of the given type is in the symtab */
 VLAD_EXTERN int vlad_kb_check_symtab(void *a_kb,
                                      const char *a_n,
